--- a/src/main/resources/static/css/ui_mo.css
+++ b/src/main/resources/static/css/ui_mo.css
@@ -5739,3 +5739,60 @@ p.dib{display:inline-block !important;}
 /*0630*/
 .hd-div3 .hd-bg3 img { width:100%; object-fit: contain !important;}
 .hd-div3 .user-1 img { object-fit: contain; }
+
+/*0701*/
+.t_1 {font-size:5rem;
+    font-weight: 600;
+    text-align: center;
+    padding: 100px 0; 
+}
+
+.iframe-size {
+  width:60rem;
+  height:33rem;
+
+}
+
+.back_btn {
+    position: fixed;
+    bottom: 5rem;
+    right: 50px;
+    width: 6rem;
+    height: 6rem;
+    border-radius: 3rem;
+    background: #e9625c;
+    font-size:5rem;
+    font-weight: 600;
+    line-height: 6rem;
+    text-align: center;
+    color: #fff;
+}
+
+.forward_btn {
+    position: fixed;
+    bottom: 5rem;
+    right: 15px;
+    width: 6rem;
+    height: 6rem;
+    border-radius: 3rem;
+    background: #e9625c;
+    font-size:5rem;
+    font-weight: 600;
+    line-height: 6rem;
+    text-align: center;
+    color: #fff;
+}
+
+.bat-box3-1{
+    padding: 0
+}
+
+.bat-box3-1 button{
+    width: 50rem;
+    border-radius: 35px;
+    font-size: 20px;
+    font-weight: 600;
+    padding: 11px 0 14px 0;
+    margin-bottom: 13px;
+    max-height: 60px;
+}
