--- a/src/main/resources/templates/thymeleaf/fo/deal/bidding.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/bidding.html
@@ -431,7 +431,8 @@
 													<input type="checkbox" id="cbx_bidAgree1"/>
 													<label for="cbx_bidAgree1"><span></span>
 														<div class="check-info">
-															<p>응찰하려는 작품<b class="c-red dib" th:text="|(작품명 : ${result.deal.workNm}, 작가명 : ${result.deal.artstActvtyNm})|"></b>이 맞습니다.</p>
+															<p>응찰하려는 작품 정보를 확인하였습니다.<br/>
+															<b class="c-red " th:utext="|(작품명:${result.deal.workNm}, 작가명:${result.deal.artstActvtyNm})|"></b></p>
 															낙찰 시 48시간 이내 결제
 														</div>
 													</label>
@@ -470,8 +471,9 @@
 												<input type="checkbox" id="cbx_bidAgree2"/>
 												<label for="cbx_bidAgree2"><span></span>
 													<div class="check-info">
-														<p>주문완료 또는 낙찰된 작품에 대한 <b class="c-red dib">취소가 불가</b>합니다.</p>
-														주문이 완료되었거나 낙찰된 작품에 대한 중도 거래 취소가 불가하며, 취소 시 <b class="c-red dib">거래취소수수료 10%</b>가 부과됩니다.
+														<p>주문완료 또는 낙찰된 작품에 대한<b class="c-red "> 취소가 불가 </b>합니다.</p>
+														주문이 완료되었거나 낙찰된 작품에 대한 중도 거래 취소가 불가하며,<br/>
+														취소 시 <b class="c-red ">거래취소수수료 10%</b>가 부과됩니다.
 													</div>
 												</label>
 											</div>
@@ -833,7 +835,7 @@ function btn_purchaseOrBid_onclick(){
 		}
 	}else{
 		if(result.deal.sellMbrSq == sMbrSqVal){
-			modalAlertShow("본인의 거래에는 응찰 할 수 없습니다.");
+			modalAlertShow("본인이 등록한 거래는 구매 할 수 없습니다.");
 			return;
 		}
 		if(result.deal.bidMbrSq == sMbrSqVal){
