--- a/src/main/resources/templates/thymeleaf/fo/deal/bidding.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/bidding.html
@@ -57,11 +57,12 @@
 							</th:block>
 							<h3 th:if="${#strings.isEmpty(result.deal.artstEnglsNm)}" th:text="${result.deal.artstActvtyNm}"></h3>
 							<h4 th:text="${result.deal.workNm}"></h4>
-							
-<!-- 							<a href="#" class="phos" data-toggle="modal" data-target="#myModal3"> -->
-<!-- 								<div class="tootip-1">신고하기</div> -->
-<!-- 								<img src="resources/img/de/popo-1.png" /> -->
-<!-- 							</a> -->
+							<!-- 
+							<a href="#" class="phos" data-toggle="modal" data-target="#myModal3">
+								<div class="tootip-1">신고하기</div>
+								<img src="resources/img/de/popo-1.png" />
+							</a>
+							 -->
 						</div>
 						<table class="tstyle1">
 							<tr>
@@ -279,7 +280,10 @@
 					</div> -->
 					
 					<div class="baeg-btn mg_t30">
+						<!--
 						<a href="#" data-toggle="modal" data-target="#myModal4"><button type="button" class="baeg-b1">제출하기</button></a>
+						-->
+						<button type="button" class="baeg-b1" onclick="fn_declaration();">제출하기</button>
 					</div>
 					
 				</div>
@@ -815,17 +819,31 @@ function pageReload(){
 	});
 }
 
+//신고하기
+function fn_declaration(){
+	if(sMbrSqVal == "" || sMbrSqVal == null){
+		
+		$(".close").trigger("click");
+		alert("confrim");
+		
+		modalConfirm("알림", "로그인 후 신고하기를 이용 하실 수 있습니다..<br><br>확인 버튼을 누르시면 로그인 페이지로 이동합니다.", function(confrim){
+			if(confrim){
+						
+			}
+		});
+	}
+}
 //응찰하기/구매하기 버튼 클릭
 function btn_purchaseOrBid_onclick(){
 	if(sMbrSqVal == "" || sMbrSqVal == null){
 		if(result.deal.dealTypCd == "S"){
-			modalConfirm("알림", "로그인 후 구매할 수 있습니다.<br>화인 버튼을 누르시면 로그인 페이지로 이동합니다.", function(confrim){
+			modalConfirm("알림", "로그인 후 구매할 수 있습니다.<br>확인 버튼을 누르시면 로그인 페이지로 이동합니다.", function(confrim){
 				if(confrim){
 					$("#loginModal").modal("show");	
 				}
 			});
 		}else{
-			modalConfirm("알림", "로그인 후 응찰할 수 있습니다.<br>화인 버튼을 누르시면 로그인 페이지로 이동합니다.", function(confrim){
+			modalConfirm("알림", "로그인 후 응찰할 수 있습니다.<br>확인 버튼을 누르시면 로그인 페이지로 이동합니다.", function(confrim){
 				if(confrim){
 					$("#loginModal").modal("show");	
 				}
