--- a/src/main/resources/templates/thymeleaf/index.html
+++ b/src/main/resources/templates/thymeleaf/index.html
@@ -48,7 +48,7 @@
 								</div>
 							</div> 
 							-->
-							<div class="swiper-slide">
+							<div class="swiper-slide" align="center" style="background-color:#90D4D3;">
 								<img src="resources/img/banner-11_pc.jpg" onclick="javascript:location.href='/totalSearch_work?searchKeyword=사전출품';" style="cursor:pointer;"/>
 								<!-- <div class="mab-text">
 									<div class="mb1-box">
@@ -59,8 +59,8 @@
 									</div>
 								</div> -->
 							</div>
-							<div class="swiper-slide">
-								<img src="resources/img/banner-12_pc.jpg" onclick="javascript:location.href='/insights?mgzSq=60';" style="cursor:pointer;"/>
+							<div class="swiper-slide" align="center" style="background-color:#ececec;">
+								<img src="resources/img/banner-12_pc.jpg" onclick="javascript:location.href='/insights';" style="cursor:pointer;"/>
 								<!-- <div class="mab-text">
 									<div class="mb2-box">
 										<div class="mb2-logo"><img src="resources/img/banner_logo1.png"></div>
@@ -78,7 +78,7 @@
 									</div>
 								</div> -->
 							</div>
-							<div class="swiper-slide">
+							<div class="swiper-slide" align="center" style="background-color:#fe4d01;">
 								<img src="resources/img/banner-13_pc.jpg" onclick="javascript:location.href='/media';" style="cursor:pointer;"/>
 								<!-- <div class="mab-text">
 									<div class="mb2-box">
