--- a/src/main/resources/static/css/ui_mo.css
+++ b/src/main/resources/static/css/ui_mo.css
@@ -2197,7 +2197,7 @@ input[type="radio"]:checked + label span {
     top: 5.6rem;
     z-index: 9;
 }
-.modal-baeg .modal-content .modal-header .baegs .close img{width:4rem;}
+.modal-baeg .modal-content .modal-header .baegs .close img{width:4rem; display: none;}
 
 .modal-baeg .modal-content .modal-header .close::before, .modal-baeg .modal-content .modal-header .close::after{display:none;}
 
@@ -5732,9 +5732,9 @@ p.dib{display:inline-block !important;}
 .text-box1 { margin-top:13px; font-size:1.5rem; }
 
 /*0628*/
-.banner_pc {display: block;}
+.banner_pc {display: none;}
 .banner_tablet {display: none;}
-.banner_mobile {display: none;}
+.banner_mobile {display: block;}
 
 /*0630*/
 .hd-div3 .hd-bg3 img { width:100%; object-fit: contain !important;}
@@ -5796,3 +5796,49 @@ p.dib{display:inline-block !important;}
     margin-bottom: 13px;
     max-height: 60px;
 }
+/* 0703 */
+.contentbox{padding: 0;width: 100%;clear: both;}
+.bigImages{margin-bottom: 12.5px;}
+.big{width: 60rem;height: 60rem;}
+.small{ width:100px; height:100px;margin-right: 10px;}
+.smallImages{
+    clear: both;
+    margin: 0 auto;
+    width: 60rem;
+}
+.small{width: 7.5rem;height: 7.5rem;margin-right: 1.25rem;float: left;}
+.smallImages .small:last-child{margin-right:0;}
+.smallImages:after{content:'';clear: both;display: block;}
+
+.big-content{background-color: rgb(255 255 255 / 0%);box-shadow: none;border: none;text-align: center;width: 60rem;margin: 0 auto;}
+.big-content .modal-header{ min-height: 0; padding: 0; border: none;}
+.big-content .modal-header .conts{right: -70px;top: 0;}
+.big-content .modal-header .conts .close{ opacity: 1;}
+.big-content .modal-header .conts .close::before, .close::after{}
+.big-content .modal-header .conts .close::before, .close::after{}
+.big-content .modal-header .conts .close::after{}
+.big-content .modal-header .conts .close::before{ background: #fff;}
+
+.select-s2{}
+.select-s2 .selectpicker{}
+.select-s2 .bootstrap-select{}
+
+.hms-p{padding-top:10px;display: inline-block;padding-left: 10px;}
+.btn-4{
+    border: #e8e8e8 1px solid;
+    display: inline-block;
+    width: 28.8rem;
+    text-align: center;
+    height: 6.6rem;
+    font-size: 2.4rem;
+    color: #333333 !important;
+    font-weight: 600;
+    padding: 1.4rem;
+    margin-top: 1.6rem;
+}
+.big-content .modal-body{
+    width: 60rem;
+    margin: 0 auto;
+    float: left;
+    padding: 0;
+} 
