--- a/src/main/resources/static/css/ui_pc.css
+++ b/src/main/resources/static/css/ui_pc.css
@@ -115,8 +115,10 @@
     padding-top: 66px;
 }
 
+/* 0701 정영우 메인 배너 겹치는 문제 수정*/
 .contents {
-    margin-top:-6px;
+	/* margin-top:-6px; */
+    margin-top:0px;
 }
 .main-banner {height:530px;
 }
@@ -125,6 +127,7 @@
     display: block;
     width: 100%;
     height: 100%;
+    max-width:1900px;
 /*     object-fit: cover; */
 }
 .mab-text {
@@ -183,6 +186,7 @@ top:0;
     display: block;
     width: 100%;
     height: 100%;
+    max-width:1900px;
 /*     object-fit: cover; */
 }
 
@@ -683,6 +687,7 @@ columns figure {
     display: block;
     width: 100%;
     height: 100%;
+    max-width:1900px;
 /*     object-fit: cover; */
 }
 .hd-div {
@@ -5285,4 +5290,43 @@ position: relative;background-color: #fbfbfb;}
     padding: 11px 0 14px 0;
     margin-bottom: 13px;
     max-height: 60px;
+}
+
+/* 0703 */
+.contentbox{padding: 0;width: 600px;}
+.bigImages{margin-bottom: 12.5px;}
+.big{width: 600px;height: 600px;}
+.small{ width:100px; height:100px;margin-right: 10px;}
+.smallImages{}
+.small{width: 75px;height: 75px;margin-right: 12.5px;float: left;}
+.smallImages .small:last-child{margin-right:0;}
+
+.big-content{ background-color: rgb(255 255 255 / 0%); box-shadow: none; border: none;}
+.big-content .modal-header{ min-height: 0; padding: 0; border: none;}
+.big-content .modal-header .conts{ right: -70px; top: 0;}
+.big-content .modal-header .conts .close{ opacity: 1;}
+.big-content .modal-header .conts .close::before, .close::after{}
+.big-content .modal-header .conts .close::before, .close::after{}
+.big-content .modal-header .conts .close::after{}
+.big-content .modal-header .conts .close::before{ background: #fff;}
+
+.select-s2{}
+.select-s2 .selectpicker{}
+.select-s2 .bootstrap-select{}
+
+.hms-p{padding-top:10px;display: inline-block;padding-left: 10px;}
+.btn-4{
+    border: #e8e8e8 1px solid;
+    display: inline-block;
+    width: 162px;
+    text-align: center;
+    height: 48px;
+    font-size: 14px;
+    color: #333333 !important;
+    font-weight: 600;
+    padding: 12px;
+    margin-top: 13px;
+}
+.bootstrap-select.btn-group .dropdown-menu li {
+    font-size:1.4rem !important;
 }
