--- a/src/main/resources/templates/thymeleaf/fo/deal/bidding.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/bidding.html
@@ -2,6 +2,7 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <!-- <script src="https://api-std.mainpay.co.kr/js/mainpay.pc-1.1.js"></script> -->
 <head>
+    <script type="text/javascript" src="resources/js/bootstrap-select.min.js"></script>
     <style>
     	.head-wrap{border-bottom:#e9e9e9 1px solid;}
     	.swi-box::before{background-color:#f9f9f9;}
