--- a/src/main/resources/templates/thymeleaf/fo/deal/dealReg.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/dealReg.html
@@ -2,7 +2,8 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 
 <head>
-<script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
+	<link type="text/css" rel="stylesheet" href="resources/css/bootstrap-select2.css">
+	<script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
     <style>
     	.head-wrap{border-bottom:#e9e9e9 1px solid;}
     	.swi-box::before{background-color:#f9f9f9;}
@@ -24,6 +25,17 @@
 		    height: 48px;
 		    margin-left: 10px;
     	}
+    	/* Chrome, Safari, Edge, Opera */
+		input::-webkit-outer-spin-button,
+		input::-webkit-inner-spin-button {
+		  -webkit-appearance: none;
+		  margin: 0;
+		}
+		
+		/* Firefox */
+		input[type=number] {
+		  -moz-appearance: textfield;
+		}
     </style>
 </head>
 
@@ -123,6 +135,10 @@
 											<th>휴대전화</th>
 											<td th:text="${result.mbrInfo.mbrDelivryCpNum}"></td>
 										</tr>
+										<tr>
+											<th>정산 계좌 정보</th>
+											<td th:text="|${result.mbrInfo.mbrBankNm} ${result.mbrInfo.mbrAccountNo}|"></td>
+										</tr>
 									</table>
 								</div>
 								
@@ -145,6 +161,11 @@
 									<div class="input-box">
 										<input type="text" class="input-2" style="font-size:14px;" id="mbrDelivryCpNum" th:value="${result.mbrInfo.mbrDelivryCpNum}" onkeyup="inputPhoneNumber(this)"/>
 										<span class="span-in">휴대전화</span>
+									</div>
+									<div class="input-box">
+										<input type="text" class="input-2" style="width:78%; font-size:14px;" placeholder="계좌인증을 진행해주세요." id="mbrAccountNo" disabled/>
+										<span class="span-in">정산 계좌 정보</span>
+										<button type="button" class="addrBtn" data-toggle="modal" data-target="#checkAccount">계좌번호 인증</button>
 									</div>
 								</div>
 							</div>
@@ -183,7 +204,7 @@
 									<tr>
 										<th><span class="my-red">소장가</span></th>
 										<td>
-											<input type="text" class="input-4" id="workPrc" th:value="${result.work.workPrc}" onkeyup="comma(this)" placeholder="작품의 소장 가격을 입력해주세요." style="font-size:15px;"/>
+											<input type="text" class="input-4" id="workPrc" th:value="${result.work.workPrc}" onkeyup="comma(this)" placeholder="소장가를 입력해주세요." style="font-size:15px;"/>
 										</td>
 									</tr>
 									<tr>
@@ -395,7 +416,8 @@
 													<input type="checkbox" id="cbx_bidAgree1"/>
 													<label for="cbx_bidAgree1"><span></span>
 														<div class="check-info">
-															<p>판매하려는 작품<b class="c-red dib" th:text="|(작품명 : ${result.work.workNm}, 작가명 : ${result.work.artstActvtyNm})|"></b>이 맞습니다.</p>
+															<p>판매하려는 작품 정보를 확인하였습니다.<br/>
+															<b class="c-red dib" th:text="|(작품명 : ${result.work.workNm}, 작가명 : ${result.work.artstActvtyNm})|"></b>이 맞습니다.</p>
 															작품명, 사이즈, 제작연도, 액자유무, 작품보증서를 한 번 더 확인했습니다.
 														</div>
 													</label>
@@ -716,7 +738,91 @@
 		</div>
 	</div>
 </div>
+<!-- 0702 시작 -->
+<div class="modal fade modal-s" id="checkAccount" tabindex="-1" role="dialog" aria-labelledby="myModal3Label" aria-hidden="true">
+	<div class="modal-dialog modal-baeg max-w530">
+		<div class="modal-content">
+			<div class="modal-header">
+				<div class="baegs">
+					<h2>계좌번호 입력해주세요.</h2>
+				    <img src="/resources/img/ba/icon-1.png" class="con-img" />
+				    <div class="close" data-dismiss="modal" aria-label="Close"><img src="/resources/img/ba/icon-end.png" /></div>
+				</div>
 
+			</div>
+			<div class="modal-body">
+				<div class="md-box-1">
+					<div class="med-box radio-2">
+					<!-- NICE 계좌인증 form -->
+					<form name="form_bc" method="post">
+						<!-- 서비스구분 (1: 소유주 확인, 2: 예금주명 확인, 3: 계좌 유효성 확인) -->
+						<input type="hidden" name="service" value="1">
+						<!-- 업무구분 (5: 소유주 확인, 2: 예금주명 확인, 4: 계좌 유효성 확인) -->
+						<input type="hidden" name="svcGbn" value="5">
+						<!-- 계좌구분 (1:개인계좌, 2:법인계좌) -->
+						<input type="radio" id="ww1" name="strGbn" value="1" checked="checked">
+						<label for="ww1" class="wd-145"><span></span>개인계좌</label>
+						<input type="radio" id="ww2" name="strGbn" value="2">
+						<label for="ww2"><span></span>법인계좌</label>
+						
+						<div class="home-2">
+							<div class="selec-box select-s2">
+								<select class="selectpicker" name="strBankCode" data-width="100%" data-size="5" title="은행을 선택해주세요.">
+									<option value="002">산업은행</option>
+									<option value="003">기업은행</option>
+									<option value="004">국민은행</option>
+									<option value="007">수협</option>
+									<option value="011">농협</option>
+									<option value="020">우리은행</option>
+									<option value="023">SC제일은행</option>
+									<option value="027">한국씨티은행</option>
+									<option value="031">대구은행</option>
+									<option value="032">부산은행</option>
+									<option value="034">광주은행</option>
+									<option value="035">제주은행</option>
+									<option value="037">전북은행</option>
+									<option value="039">경남은행</option>
+									<option value="045">새마을금고</option>
+									<option value="048">신협</option>
+									<option value="071">우체국</option>
+									<option value="081">하나은행</option>
+									<option value="088">신한은행</option>
+								</select>
+							</div>
+							
+							<!-- <!-- <div class="input-box">
+								<input type="text" class="input-2" placeholder="은행코드을 입력해주세요" />
+								<span class="span-in">은행코드</span>
+							</div> -->
+							
+							<div class="input-box">
+								<input type="number" class="input-2" name="strAccountNo" placeholder="계좌번호를 입력해주세요" />
+								<span class="span-in">계좌번호</span>
+							</div>								
+							<div class="input-box">
+								<input type="text" class="input-2" name="name" placeholder="예금주명을 입력해주세요" th:value="${result.mbrInfo.mbrNm}" readOnly/>
+								<span class="span-in">예금주명</span>
+							</div>
+							<div class="input-box">
+								<input type="number" class="input-2" name="birth" placeholder="생년월일 6자리 / 사업자번호 10자리" />
+								<span class="span-in">생년월일</span>
+							</div>
+						</div>
+					</form>
+					</div>
+					
+					
+					<div class="baeg-btn mg_t30">
+						<button type="button" class="baeg-b1" onclick="bcSubmit()">인증</button>
+						<button type="button" class="baeg-b2" data-dismiss="modal" aria-label="Close">취소</button>
+					</div>
+					
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+<!-- 0702 끝 -->
 
 <script th:inline="javascript">
 $(function() {
@@ -724,9 +830,85 @@ $(function() {
 		modalAlertShow("로그인 후 이용하실 수 있습니다.", "main");
 	}
 });
+$('.selectpicker').selectpicker();
 var result = /*[[${result}]]*/ 'default';
 var deal = new Object();
 result.deal = deal;
+//계좌구분
+$("input[name=strGbn]").click(function(){
+	if(this.value != "1"){
+		$("input[name=name]").val("");
+		$("input[name=name]").attr("readOnly", false);
+	}else{
+		$("input[name=name]").val(result.mbrInfo.mbrNm);
+		$("input[name=name]").attr("readOnly", true);
+	}
+});
+//계좌 확인
+function bcSubmit(){
+	var service = "1";
+	var svcGbn = "5";
+	var strGbn = $("input:radio[name='strGbn']:checked").val();
+	var strBankCode = $("[name=strBankCode] option:selected").val();
+	var strAccountNo = $("input[name=strAccountNo]").val();
+	var name = $("input[name=name]").val();
+	var birth = $("input[name=birth]").val();
+	if(strGbn == "" || strGbn == null){
+		$("#checkAccount").modal("hide");
+		modalAlertShow("계좌 구분을 선택해주세요.");
+		return false;
+	}
+	if(strBankCode == "" || strBankCode == null){
+		$("#checkAccount").modal("hide");
+		modalAlertShow("은행을 선택해주세요.");
+		return false;
+	}
+	if(strAccountNo == "" || strAccountNo == null){
+		$("#checkAccount").modal("hide");
+		modalAlertShow("계좌번호를 입력해주세요.");
+		return false;
+	}
+	if(name == "" || name == null){
+		$("#checkAccount").modal("hide");
+		modalAlertShow("예금주명을 입력해주세요.");
+		return false;
+	}
+	if(birth == "" || birth == null){
+		$("#checkAccount").modal("hide");
+		modalAlertShow("예금주의 생년월일(사업자번호)을 입력해주세요.");
+		return false;
+	}
+	var queryString = $("form[name=form_bc]").serialize();
+	
+	$.ajax({
+        type: "post",
+        url: "/memBankRequest",
+        data: queryString,
+        dataType: "json",
+        success: function(data) {
+        	if(data > 0 || data != null || data != ""){
+        		bankCheckCallBack(data.resultCode, data.resultMsg);
+        	}
+        },
+        error: function(error) {
+            alert("오류 발생" + error);
+        }
+	});
+} 
+//계좌 확인 콜백
+function bankCheckCallBack(rstCd, rstMsg){
+	$("#checkAccount").modal("hide");
+	if(rstCd != 0000){
+		modalAlertShow(rstMsg);
+	}else{
+		result.mbrInfo.mbrBankNm = $("[name=strBankCode] option:selected").text();
+		result.mbrInfo.mbrBankCd = $("[name=strBankCode] option:selected").val();
+		result.mbrInfo.mbrAccountNo = $("input[name=strAccountNo]").val();
+		$("#mbrAccountNo").val(result.mbrInfo.mbrBankNm+" "+result.mbrInfo.mbrAccountNo);
+		$("form[name=form_bc]")[0].reset();
+		modalAlertShow("계좌 인증이 완료 되었습니다.");
+	}
+};
 
 $("#workGrtUrl").change(function(){
 	//파일 경로.
@@ -750,7 +932,8 @@ $("#workGrtUrl").change(function(){
 jQuery(document).ready(function() {
 	$('.datepicker').datepicker();
 	$("#dealStrtDt").calendar($("#dealEndngDt"));
-	if(result.mbrInfo.mbrDelivryAddr == null || result.mbrInfo.mbrDelivryAddr == ""){
+	if((result.mbrInfo.mbrDelivryAddr == null || result.mbrInfo.mbrDelivryAddr == "")
+			|| (result.mbrInfo.mbrAccountNo == null || result.mbrInfo.mbrAccountNo == "")){
 		$(".home-1").css("display", "none");
 		$(".home-2").css("display", "");
 		$("#q1").attr("disabled", true);
@@ -902,13 +1085,21 @@ function autoLake(){
 		if(width <= 333.3 && depth <= 248.5 && width > 290.9 && depth > 218.2){
 			lake = 500;
 		}
-		$("#workLake").html("<br/>"+lake+"호 입니다.");
-		result.work.workLake = lake;
+		if(lake == "" || lake == null){
+			$("#workSizeWidth").val("");
+			$("#workSizeDepth").val("");
+			$("#workLake").html("<br/>작품 사이즈를 입력하시면 호수가 자동으로 계산됩니다.");
+			modalAlertShow("올바르지 않은 사이즈 입니다. 다시 입력해주세요.", "workSizeWidth");
+		}else{
+			$("#workLake").html("<br/>"+lake+"호 입니다.");
+			result.work.workLake = lake;
+		}
 		
 	}else{
 		$("#workLake").html("<br/>작품 사이즈를 입력하시면 호수가 자동으로 계산됩니다.");
 		result.work.workLake = "";
 	}
+	
 }
 //호수 안내 팝업 오픈
 function openLakeHelp(){
@@ -1043,6 +1234,10 @@ function vaild(){
 	}
 	if(result.mbrInfo.mbrDelivryCpNum == null || result.mbrInfo.mbrDelivryCpNum == ""){
 		modalAlertShow("배송 시작 휴대전화 번호가 입력되지 않았습니다.");
+		return false;
+	}
+	if(result.mbrInfo.mbrAccountNo == null || result.mbrInfo.mbrAccountNo == ""){
+		modalAlertShow("정산 계좌 정보가 입력되지 않았습니다.");
 		return false;
 	}
 	if($("#workGrtUrl1").val() == null || $("#workGrtUrl1").val() == ""){
