--- a/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_detail_sell.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_detail_sell.html
@@ -2,6 +2,7 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
 <script src="https://api-std.mainpay.co.kr/js/mainpay.pc-1.1.js"></script>
+<link type="text/css" rel="stylesheet" href="resources/css/bootstrap-select2.css">
 <head>
     <style>
     	.head-wrap{border-bottom:#e9e9e9 1px solid;}
@@ -152,20 +153,20 @@
 											<tr>
 												<th><span class="my-red">부가서비스(필수)</span></th>
 												<td class="pd_t17">
-													<div class="selec-box bg-st">
-														<select class="selectpicker" id="sbx_trnsprtTypCd" style="min-width:152px !important;">
+													<!-- <div class="selec-box bg-st"> -->
+														<select class="selectpicker" id="sbx_trnsprtTypCd">
 															<option value="null">-선택-</option>
 															<option value="P">프리미엄운송</option>
 															<option value="D">직접운송</option>
 														</select>
-													</div>
-													<div class="selec-box bg-st">
-														<select class="selectpicker" id="sbx_trnsprtAreaCd" style="min-width:300px !important;">
+													<!-- </div> -->
+													<!-- <div class="selec-box bg-st"> -->
+														<select class="selectpicker" id="sbx_trnsprtAreaCd">
 															<option value="null">-선택-</option>
 															<option value="MA">수도권</option>
 															<option value="NA">비수도권</option>
 														</select>
-													</div>
+													<!-- </div> -->
 													<div id="div_trnsprtTypCd">
 													</div>
 												</td>
@@ -173,11 +174,11 @@
 											<tr>
 												<th><span class="">부가서비스(선택)</span></th>
 												<td class="pd_t17">
-													<div class="selec-box bg-st">
-														<select class="selectpicker" id="sbx_trnsprtServiceCd" disabled style="min-width:300px !important;">
+													<!-- <div class="selec-box bg-st"> -->
+														<select class="selectpicker" id="sbx_trnsprtServiceCd" disabled>
 															<option value="null">-선택-</option>
 														</select>
-													</div>
+													<!-- </div> -->
 													<div id="div_trnsprtServiceCd">
 													</div>
 												</td>
@@ -185,11 +186,11 @@
 											<tr>
 												<th><span class="">쿠폰 선택</span></th>
 												<td class="pd_t17">
-													<div class="selec-box bg-st">
-														<select class="selectpicker" id="sbx_couponList" disabled style="min-width:300px !important;">
+													<!-- <div class="selec-box bg-st"> -->
+														<select class="selectpicker" id="sbx_couponList" disabled>
 															<option value="null">-선택-</option>
 														</select>
-													</div>
+													<!-- </div> -->
 													<div id="div_couponList">
 													</div>
 													<div class="comy-sum" id="div_totalAmount">
