--- a/src/main/resources/templates/thymeleaf/fo/myPage/collection_reg.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/collection_reg.html
@@ -825,6 +825,7 @@ function collectionReg(){
     			        processData : false,
     			        success: function(data) {
     			        	if(data != 0 || data != null || data != ""){
+    			        		modalAlertShow("성공적으로 저장되었습니다.", "myCollection");
       			        	}
     			        },
     			        error: function(error) {
