--- a/src/main/resources/templates/thymeleaf/header.html
+++ b/src/main/resources/templates/thymeleaf/header.html
@@ -4,15 +4,14 @@
 <th:block th:fragment="headerFragment">
 
 <head>
-<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="initial-scale=1,user-scalable=no,maximum-scale=1,width=device-width">
-	<meta name="mobile-web-app-capable" content="yes">
-	<meta name="apple-mobile-web-app-capable" content="yes">
-	<meta name="theme-color" content="#000000">
-	<meta name="description" content="">
-	<meta name="author" content="">
+	<meta charset="utf-8">
 	<title>딜링아트</title>
+	<meta name="keywords" content="미술,아트,경매,수수료,정찰,운송,보험,직거래,dealingart">
+	<meta property="og:type" content="website">
+	<meta property="og:title" content="DeailngArt">
+	<meta property="og:description" content="개인간 미술품 거래 마켓플레이스">
+	<meta property="og:image" content="https://www.dealing-art.com/resources/img/logo_new.png">
+	<meta property="og:url" content="https://www.dealing-art.com">
 <!-- 	<link rel="icon" href="http://localhost/resources/static/favicon.ico" /> -->
  	
  	<link rel="icon" type="image/png" href="/resources/img/favicon.png">
