--- a/src/main/resources/templates/thymeleaf/fo/deal/bidding.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/bidding.html
@@ -2,7 +2,6 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <!-- <script src="https://api-std.mainpay.co.kr/js/mainpay.pc-1.1.js"></script> -->
 <head>
-    <script type="text/javascript" src="resources/js/bootstrap-select.min.js"></script>
     <style>
     	.head-wrap{border-bottom:#e9e9e9 1px solid;}
     	.swi-box::before{background-color:#f9f9f9;}
@@ -723,50 +722,53 @@ function workList(){
 var bidDate = [];
 var bidPrc = [];
 $(function() {
+	bidDate.push(result.deal.dealStrtDate);
+	bidPrc.push(result.deal.dealStrtPrc.replaceAll(",", ""));
 	for(var i=0; i<result.auctnBid.length; i++){
 		bidDate.push(result.auctnBid[i].bidDate);
 		bidPrc.push(result.auctnBid[i].bidPrc);
 	}
-});
-const bidHistory = new Chart(document.getElementById("canvas"), {
-    type: 'line',
-    data: {
-        labels: bidDate,
-        datasets: [{
-            label: '응찰가',
-            data: bidPrc,
-            borderColor: "rgba(50, 50, 50, 50)",
-            backgroundColor: "rgba(50, 50, 50, 50)",
-            borderWidth: 3,
-            pointRadius: 5,
-            fill: false,
-            lineTension: 0
-        }]
-    },
-    options: {
-    	plugins: {
-            tooltip: {
-            	titleFont: {
-            		weight: 'normal',
-            		size: 13
-            	},
-            	bodyFont: {
-            		weight: 'normal',
-            		size: 13
-            	},
-            	callbacks: {
-                    title: function(context) {
-                    	var title = "응찰시간: " + context[0].label;
-                    	return title;
-                    }
-                }
-            },
-            legend: {
-        		display: false
-        	}
+	const bidHistory = new Chart(document.getElementById("canvas"), {
+	    type: 'line',
+	    data: {
+	        labels: bidDate,
+	        datasets: [{
+	            label: '응찰가',
+	            data: bidPrc,
+	            borderColor: "rgba(50, 50, 50, 50)",
+	            backgroundColor: "rgba(50, 50, 50, 50)",
+	            borderWidth: 3,
+	            pointRadius: 5,
+	            fill: false,
+	            lineTension: 0
+	        }]
+	    },
+	    options: {
+	    	plugins: {
+	            tooltip: {
+	            	titleFont: {
+	            		weight: 'normal',
+	            		size: 13
+	            	},
+	            	bodyFont: {
+	            		weight: 'normal',
+	            		size: 13
+	            	},
+	            	callbacks: {
+	                    title: function(context) {
+	                    	var title = "응찰시간: " + context[0].label;
+	                    	return title;
+	                    }
+	                }
+	            },
+	            legend: {
+	        		display: false
+	        	}
+			}
 		}
-	}
+	});
 });
+
 
 
 //부모창 스크롤 방지
