--- a/src/main/resources/templates/thymeleaf/header.html
+++ b/src/main/resources/templates/thymeleaf/header.html
@@ -5,25 +5,21 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>딜링아트</title>
-	<meta name="keywords" content="미술,아트,경매,수수료,정찰,운송,보험,직거래,dealingart">
-	<meta property="og:type" content="website">
-	<meta property="og:title" content="DeailngArt">
-	<meta property="og:description" content="개인간 미술품 거래 마켓플레이스">
-	<meta property="og:image" content="https://www.dealing-art.com/resources/img/DA_logo_og.png">
-	<meta property="og:url" content="https://www.dealing-art.com">
-<!-- 	<link rel="icon" href="http://localhost/resources/static/favicon.ico" /> -->
+	
+	<meta name="viewport" content="width=device-width, initial-scale=1">
  	
  	<link rel="icon" type="image/png" href="/resources/img/favicon.png">
- 	
-	<link type="text/css" rel="stylesheet" href="resources/css/bootstrap-select.min.css">
+ 	<link type="text/css" rel="stylesheet" href="resources/css/bootstrap-select.min.css"/>
 	<link type="text/css" rel="stylesheet" href="resources/css/font.css" />
 	<link type="text/css" rel="stylesheet" href="resources/css/swiper-bundle.min.css" />
-	<link type="text/css" rel="stylesheet" href="resources/css/bootstrap.min.css">
-	<link type="text/css" rel="stylesheet" href="resources/css/common_pc.css">
+	<link type="text/css" rel="stylesheet" href="resources/css/bootstrap.min.css"/>
+	<link type="text/css" rel="stylesheet" href="resources/css/common_pc.css"/>
+	
 	<link type="text/css" media="screen and (max-width: 750px)" rel="stylesheet" href="resources/css/ui_mo.css" />
+	
 	<link type="text/css" media="screen and (min-width: 751px) and (max-width: 1536px)" rel="stylesheet" href="resources/css/ui_tablet.css" />
 	<link type="text/css" media="screen and (min-width: 1537px)" rel="stylesheet" href="resources/css/ui_pc.css" />
+	
 	<link type="text/css" rel="stylesheet" href="resources/css/jquery-ui.css">
 	
 	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
