--- a/src/main/resources/templates/thymeleaf/header.html
+++ b/src/main/resources/templates/thymeleaf/header.html
@@ -6,6 +6,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>딜링아트</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="keywords" content="미술,아트,경매,수수료,정찰,운송,보험,직거래,dealingart">
 	<meta property="og:type" content="website">
 	<meta property="og:title" content="DeailngArt">
